--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="hero">
         <div class="herolayer">
             <p class="no-display">Hero</p>
-            <h1 class="title">Modern, <span class="emphasis">professional</span> websites.</h1>
+            <h1 class="title">This is the <span class="emphasis">new</span> title.</h1>
             <div class="center">
                 <p class="scroll">scroll down</p>
             </div>
