Added "Bret Cameron" as author

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p class="no-display">Hero</p>
             <h1 class="title">This is the <span class="emphasis">new</span> title.</h1>
             <div class="center">
-                <p class="scroll">scroll down</p>
+                <p class="scroll">by Bret Cameron</p>
             </div>
 
     </section>
