New section added at the bottom of the homepage.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
             </div>
         </div>
     </section>
+
+    <section class="hero">
+        <div class="herolayer">
+            <p class="no-display">Footer</p>
+            <p class="more">If you'd like to find out more information about this project, click the button below.</p>
+            <br>
+            <a href="#"><button class="btn">Find Out More!</button></a>
+        </div>
+
 </body>
 
 </html>
